--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -1,13 +1,12 @@
 <%- include('partials/header') -%>
-<div class="hero min-h-screen" style="background-image: url(/Images/funes-4984899.jpg);">
+<div class="hero md:min-h-screen" style="background-image: url(/Images/funes-4984899.jpg);">
   <div class="hero-overlay bg-opacity-20"></div>
   <div class="text-center text-neutral-content">
     <div>
       <div class="md:card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
           <form action="/post/createPost" enctype="multipart/form-data" method="POST">
-
-          <div class="form-control flex">
+          <div class="form-control ">
             <h2 class="text-3xl font-bold text-slate-900">Create a Post</h2>
           <label class="label">
             <span class="label-text">Title</span>
@@ -15,35 +14,35 @@
           <input type="text" placeholder="Title" class="input input-bordered text-black" id="title" name="title"/>
           </div>
 
-          <div class="form-control">
+          <div class="form-control py-1 md:py-0">
             <label class="label">
               <span class="label-text">Location</span>
             </label>
             <input type="text" placeholder="Location" class="input input-bordered text-black" id="location" name="location"/>
           </div>
 
-          <div class="form-control">
+          <div class="form-control py-1 md:py-0">
             <label class="label">
               <span class="label-text">Trail Name</span>
             </label>
             <input type="text" placeholder="Trail name" class="input input-bordered text-black" id="trailName" name="trailName"/>
           </div>
 
-          <div class="form-control">
+          <div class="form-control py-1 md:py-0">
             <label class="label">
               <span class="label-text">Caption</span>
             </label>
             <textarea type="text" placeholder="Caption" class="input input-bordered h-32 text-black" id="caption" name="caption"></textarea>
           </div>
 
-          <div class="form-control">
+          <div class="form-control py-1 md:py-0">
             <label class="label">
               <span class="label-text">Image</span>
             </label>
             <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full text-black" id="imageUpload" name="file" />
           </div>
 
-          <div class="form-control">
+          <div class="form-control py-1 md:py-0">
           <div class="rating rating-lg mt-2 flex flex-col">
             <label class="rating">
               <span class="label-text">Rating</span>
@@ -58,7 +57,7 @@
           </div>
         </div>
           
-          <div class="form-control mt-3">
+          <div class="form-control mt-3 py-1 md:py-0">
             <button class="btn btn-grey">Post</button>
           </div>
         </form>
@@ -67,7 +66,6 @@
     </div>
   </div>
 </div>
-
 
 
 <%- include('partials/footer') -%>
