Added search functionality to the Nav for the users not using a large screen.

--- a/public/style.css
+++ b/public/style.css
@@ -3420,6 +3420,14 @@ html {
   padding: 0px;
 }
 
+.input-sm {
+  height: 2rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 2rem;
+}
+
 .menu-horizontal {
   display: inline-flex;
   width: -moz-max-content;
