--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/imgs/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="/imgs/site.webmanifest">
+    <link rel="mask-icon" href="/imgs/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -44,7 +44,7 @@
         </ul>
        
         <div class="form-control">
-          <form action="/profile/getProfileSearch/" method="get">
+          <form action="/profile/profileSearch/" method="get">
             <div class="form-control">
               <div class="input-group">
                 <input type="text" placeholder="Search…" class="input input-bordered text-slate-900" name="userName" />
@@ -93,7 +93,7 @@
             <li><a href="/profile/<%= loggedInUser.userName%>">Profile</a></li>
             <li><a href="/post">Post</a></li>
             <div class="form-control">
-              <form action="/profile/getProfileSearch/" method="get">
+              <form action="/profile/profileSearch/" method="get">
                 <div class="form-control">
                   <div class="input-group">
                     <input type="text" placeholder="Search…" class="input-sm input-bordered text-slate-900" name="userName" />
