Updated the search method in the profile controller so it populates user info with the post. Also simlified the delete method on the profile controller.

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -96,7 +96,7 @@
           
             <form
             class="col-1"
-            action="/profile/likePost/<%= posts[i].id %>?_method=PUT"
+            action="/profile/likePost/<%= posts[i]._id %>?_method=PUT"
             method="POST"
           >
             <button class="btn fa fa-heart bg-slate-900" type="submit"></button>
