--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="hero-content text-center text-neutral-content">
       <div class="max-w-md">
         <h1 class="mb-5 text-6xl md:text-8xl lg:text-9xl font-bold flex justify-center">Trailblazers</h1>
-        <h2 class="mb-5 text-2xl md:text-3xl lg:text-4xl font-bold">Helps you connect and share your adventures with other walkers, hikers and climbers</h2>
+        <h2 class="mb-5 text-2xl md:text-3xl lg:text-4xl font-bold">Helps you connect and share your adventures with other walkers, hikers and climbers.</h2>
         <%if(loggedInUser == undefined){ %>
         <a href="/login"><button class="btn mx-10 btn-grey w-32 mb-5">Login</button></a>
         <a href="/signup"><button class="btn mx-10 btn-grey w-32">Sign up</button></a>
