--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -11,7 +11,7 @@
   </div>
 </section>
 
-<section class="grid md:grid-cols-2 gap-4 sm:grid-cols-1 lg:grid-cols-3">
+<section class="grid md:grid-cols-2 gap-4 sm:grid-cols-1 lg:grid-cols-3 xl:grid-cols-4">
   <% for(var i=0; i<posts.length; i++) {%>
   <div class="card card-compact w-fit bg-slate-100 shadow-xl m-2 max-w-md mx-auto">
     <figure class="h-60 lg:h-72"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
