Updated the feed media queries from the xl screen to the 2xl screen.

--- a/public/style.css
+++ b/public/style.css
@@ -4569,3 +4569,9 @@ button.btn-grey:hover{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
+
+@media (min-width: 1536px) {
+  .\32xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
