--- a/views/post.ejs
+++ b/views/post.ejs
@@ -11,13 +11,13 @@
       <img src="<%= post.image%>" />
     </div>
     <div class="grid grid-cols-12 flex">
-      <p class="col-start-1 md:col-span-7 col-span-12"> <%= post.caption %></p>
-      <div class="row start-3 col-start-1 col-span-6 md:row-start-1 md:col-start-9 md:col-span-2 justify-self-start mt-4 md:mt-0"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
+      <p class="col-start-1 md:col-span-7 col-span-12 lg:col-span-8"> <%= post.caption %></p>
+      <div class="row start-3 col-start-1 col-span-6 md:row-start-1 md:col-start-9 lg:col-start-10 md:col-span-2 justify-self-start mt-4 md:mt-0"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
       <div class="col-start-7 col-span-6 md:row-start-1 md:col-start-11 md:col-span-2 justify-self-end mt-4 md:mt-0"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
     </div>
     <%if(post.user.id == loggedInUser._id){ %>
-    <div class="grid grid-cols-9 flex mt-4 md:mt-0">
-      <div class="md:col-start-8 flex md:justify-end justify-self-center col-start-1 col-span-9 gap-4">
+    <div class="grid grid-cols-9 flex mt-4 md:mt-2 2xl:mt-4">
+      <div class="md:col-start-8 flex md:justify-end justify-self-center col-start-1 col-span-9 gap-4 lg:col-start-9">
         <form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -37,7 +37,7 @@
     </form>
 </div>
     <% } else {%>   
-      <div class="grid grid-cols-9 flex">
+      <div class="grid grid-cols-9 flex mt-4 md:mt-2 2xl:mt-4">
       <div class="col-start-1 col-span-9 md:col-start-9 flex justify-center lg:justify-self-end">
         <form
       class="col-1"
