--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,7 +23,7 @@
   </div>
 
 
-    <div class="col-start-7 flex flex-col my-auto">
+    <div class="col-start-6 lg:col-start-7 flex flex-col my-auto">
         <h5 class='self-center text-2xl font-bold'><%= posts.length%></h5>
         <h5 class='self-center text-lg'>Posts</h5>
     </div>
@@ -39,14 +39,14 @@
       </div>
     </section>
     
-    <section class="row-start-2 lg:row-start-1 border border-slate-900 col-start-1 col-span-9 lg:col-start-4 lg:col-span-6 grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 lg:gap-4 border-black mx-4 lg:m-4 p-2 lg:p-4">
-      <div class="col-start-1 2xl:col-span-3 md:col-span-2 grid grid-cols-9 pt-4 px-4">
+    <section class="row-start-2 lg:row-start-1 border border-slate-900 col-start-1 col-span-9 lg:col-start-4 lg:col-span-6 grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 lg:gap-4 mx-4 lg:m-4 p-2 lg:p-4">
+      <div class="col-start-1 2xl:col-span-3 md:col-span-2 grid grid-cols-9 pt-4 px-4 mb-4 lg:mb-1">
         <h2 class="col-start-1 text-2xl">Posts:</h2>
         <a class="col-start-6 col-span-4 flex justify-end" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-full lg:w-3/5">Add Post</button></a>
       </div>
       
       <% for(var i=0; i<posts.length; i++) {%>
-      <div class="card card-compact w-fit bg-slate-100 shadow-xl">
+      <div class="card card-compact w-fit bg-slate-100 shadow-xl mb-4">
         <figure class="h-60 lg:h-72"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
         <div class="card-body flex grid grid-cols-3">
           <div class="col-start-1 col-span-2">
